--- a/2-2-Hands-on Lab Finding Duplicates_v2.ipynb
+++ b/2-2-Hands-on Lab Finding Duplicates_v2.ipynb
@@ -165,7 +165,10 @@
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows\n",
-    "print(df.head())"
+    "# print(df.head())\n",
+    "print(df.shape)\n",
+    "\n",
+    "# df['Country'].value_counts()."
    ]
   },
   {
@@ -275,7 +278,14 @@
     "# Distribution of duplicates by Country\n",
     "country_duplicates = df[duplicates].Country.value_counts()\n",
     "country_duplicates.plot(kind='bar', figsize=(12, 6), title='Duplicate Rows by Country')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Question 3\n",
+    "# calculate duplicate values are there in the “Country” column in the 2024 dataset?\n",
+    "country_duplicates = df[duplicates].Country.value_counts()\n",
+    "print(f\"country_duplicates: {len(country_duplicates)}\")\n",
+    "len(df['Country'].value_counts())\n",
+    "\n"
    ]
   },
   {
